--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
                         <li><a href="#section7-7">Ask HN Projects</a></li>
                     </ul>
                 </li>
+                <li>
+                    <a href="#section8" class="has-submenu">
+                        <i class="fas fa-code"></i> 自建网站
+                        <span class="arrow">▼</span>
+                    </a>
+                    <ul class="submenu">
+                        <li><a href="#section8">所有网站</a></li>
+                    </ul>
+                </li>
             </ul>
         </nav>
         <main class="content">
@@ -495,6 +504,35 @@
                         <a href="https://news.ycombinator.com/item?id=42373343" class="card" target="_blank">
                             <h3>HN: $500/month Projects</h3>
                             <p>https://news.ycombinator.com/item?id=42373343</p>
+                        </a>
+                    </div>
+                </div>
+            </section>
+
+            <section id="section8" class="section">
+                <h2>自建网站</h2>
+                <div class="subcategory">
+                    <h3>所有网站</h3>
+                    <div class="card-grid">
+                        <a href="https://devnav.online/" class="card" target="_blank">
+                            <h3>技术工具导航</h3>
+                            <p>https://devnav.online/</p>
+                        </a>
+                        <a href="https://trumptowerdefense.monster/" class="card" target="_blank">
+                            <h3>Trump Tower Defense</h3>
+                            <p>https://trumptowerdefense.monster/</p>
+                        </a>
+                        <a href="https://boxing3d.space/" class="card" target="_blank">
+                            <h3>Boxing 3D</h3>
+                            <p>https://boxing3d.space/</p>
+                        </a>
+                        <a href="https://drawthebirdpath.com/" class="card" target="_blank">
+                            <h3>Draw the Bird Path</h3>
+                            <p>https://drawthebirdpath.com/</p>
+                        </a>
+                        <a href="https://persona-nav.vercel.app/" class="card" target="_blank">
+                            <h3>IndieTools Hub</h3>
+                            <p>独立开发者工具导航</p>
                         </a>
                     </div>
                 </div>
